--- a/examples/kubernetes/stolon-keeper.yaml
+++ b/examples/kubernetes/stolon-keeper.yaml
@@ -82,10 +82,9 @@ spec:
   volumeClaimTemplates:
     - metadata:
         name: data
-        annotations:
-          volume.alpha.kubernetes.io/storage-class: standard
       spec:
         accessModes: ["ReadWriteOnce"]
+        storageClassName: standard
         resources:
           requests:
             storage: 512Mi
